<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cruz.dariel.com.simonsayskotlin.ui.fragments.TitleFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/titleContraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_header_height"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintTop_toBottomOf="@id/titleImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

    <Button
        android:id="@+id/scoresButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

    <Button
        android:id="@+id/rulesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        app:layout_constraintTop_toBottomOf="@id/scoresButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>