<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.GameFragment">

    <TextView
        style="@style/TextStyle"
        android:id="@+id/game_state_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/press_start"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/start"
        style="@style/StartStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/green_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_selector"
        android:layout_marginBottom="55dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/start_btn" />

    <Button
        android:id="@+id/red_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/red_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/start_btn" />

    <Button
        android:id="@+id/yellow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/yellow_selector"
        app:layout_constraintStart_toStartOf="@id/green_btn"
        app:layout_constraintTop_toBottomOf="@id/green_btn" />

    <Button
        android:id="@+id/blue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_selector"
        app:layout_constraintStart_toStartOf="@id/red_btn"
        app:layout_constraintTop_toTopOf="@id/yellow_btn"
        app:layout_constraintTop_toBottomOf="@id/red_btn" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/high_score_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/current_score_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>